--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "New container tab",
   "version": "0.1.0",
-  "description": "Press Ctrl+Shift+D to create a new container tab (Cmd+Shift+D on Mac).",
+  "description": "Press Alt+C to create a new container tab.",
   "author": "Jonathan Kingston",
   "icons": {
     "128": "img/icon.svg"
@@ -14,7 +14,7 @@
   ],
   "commands": {
     "new-container-tab": {
-      "suggested_key": { "default": "Ctrl+Shift+D" },
+      "suggested_key": { "default": "Alt+C" },
       "description": "Create a new container tab"
     }
   },
